--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
   background-color: lightblue;
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  height: 100vh;
 }
 .game-info {
   margin-left: 20px;
