--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,10 @@
   cursor: pointer;
   border: none;
   float: left;
-  height: 5vh;
+  height: 10vh;
   margin: -3px -5px -3px -5px;
   padding: 0;
-  width: 5vh;
+  width: 10vh;
 
 }
 .board-row:after {
@@ -24,8 +24,8 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: auto;
-  height: 100vh;
+  /* width: 100vh;
+  height: 100vh; */
 }
 .game-info {
   margin-left: 20px;
