--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
   margin-left: 20px;
 }
 .game-board{
-  background-image: url("/src/StaticBgs/field.png");
+  /* background-image: url("/src/StaticBgs/field.png"); */
   background-repeat: no-repeat;
   background-size:cover;
   padding: 20px;
